--- a/css-essentials/styles.css
+++ b/css-essentials/styles.css
@@ -2,24 +2,35 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
+}
+
+body {
+  width: 100%;
 }
 
 nav {
-  display: inline;
-  /* justify-content: space-between;
-  align-items: center; */
-  padding: 24px 16px;
-  /* box-shadow: 0.1px 0.1px 10px gray; */
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 24px;
+  padding: 24px;
+  margin-bottom: 20px;
+  box-shadow: 0.1px 0.1px 10px gray;
 }
 nav span {
+  display: inline;
   font-weight: bolder;
   cursor: pointer;
 }
 nav ul {
   display: inline;
   list-style-type: none;
-  gap: 24px;
+}
+nav ul li {
+  display: inline;
+
 }
 a {
   text-decoration: none;
